fixed x overflow on mobile devices

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,169 +1,162 @@
-.heroWrapper{
-  position:relative;
-  width:100vw;
-  height:calc(100vh + 6rem);
-  overflow-x:hidden;
+.heroWrapper {
+  position: relative;
+  width: 100vw;
+  height: calc(100vh + 6rem);
+  overflow-x: hidden;
   color: var(--text-black);
   background-color: var(--primary-yellow);
 }
 
-.hero{
-   position: relative;
-  height:100%;
-  width:calc(100% - 160px);
-  margin:0 auto;
+.hero {
+  position: relative;
+  height: 100%;
+  width: calc(100% - 160px);
+  margin: 0 auto;
   max-width: 1100px;
   font-family: var(--font-fancy);
 }
 
-.heroContentWrapper{
+.heroContentWrapper {
   position: absolute;
-  width:100%;
-  display:flex;
-  top:50%;
+  width: 100%;
+  display: flex;
+  top: 50%;
   transform: translateY(-50%);
   align-items: center;
   justify-content: space-between;
 }
 
-
-.heroMain{
-  width:100%;
-  max-width:600px;
-  padding-right:2rem;
+.heroMain {
+  width: 100%;
+  max-width: 600px;
+  padding-right: 2rem;
 }
 
-.heroMain h1{
-  font-size:4rem;
+.heroMain h1 {
+  font-size: 4rem;
 }
 
-.heroQuoteWrapper{
+.heroQuoteWrapper {
   display: flex;
   align-items: center;
-  padding:1rem 0;
+  padding: 1rem 0;
 }
 
-.Quote{
+.Quote {
   font-size: 1.5rem;
 }
 
-.styleBar{
-  height:2px;
-  width:80px;
+.styleBar {
+  height: 2px;
+  width: 80px;
   background-color: var(--primary-purple);
-  margin:0 8px;
+  margin: 0 8px;
 }
 
-.heroArtWrapper{
+.heroArtWrapper {
   position: relative;
-  width:500px;
-  height:500px;
+  width: 500px;
+  height: 500px;
 }
-
-
 
 /*------------------Overview Section --------------------*/
-.aboutWrapper{
+.aboutWrapper {
   position: relative;
   background-color: var(--primary-violet);
-  padding:8rem 0;
+  padding: 8rem 0;
 }
 
-.aboutWheelWrapper{
-  position:absolute;
-  width:200px;
-  height:200px;
-  top:-100px;
-  right:20px;
+.aboutWheelWrapper {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  top: -100px;
+  right: 20px;
 }
 
-.aboutMain{
+.aboutMain {
   position: relative;
-  z-index:20;
+  z-index: 20;
   max-width: 700px;
-  margin:0 auto;
+  margin: 0 auto;
   background-color: var(--text-white);
-  padding:2rem 2rem 4rem;
+  padding: 2rem 2rem 4rem;
   border-radius: 24px;
-  border:2px solid var(--text-black);
+  border: 2px solid var(--text-black);
   box-shadow: 6px 6px 0 0 var(--text-black);
 }
 
-.aboutStyleStar{
+.aboutStyleStar {
   position: absolute;
-  width:100px;
-  height:100px;
-  top:-50px;
-  left:-40px;
+  width: 100px;
+  height: 100px;
+  top: -50px;
+  left: -40px;
 }
 
-.aboutTitle{
-  margin:1rem 0;
+.aboutTitle {
+  margin: 1rem 0;
   text-align: center;
 }
 
-.aboutContent{
+.aboutContent {
   line-height: 1.25rem;
 }
 
-
-.aboutBgWrapper{
+.aboutBgWrapper {
   position: absolute;
-  width:100%;
-  height:400px;
-  bottom:0;
+  width: 100%;
+  height: 400px;
+  bottom: 0;
 }
 
-
-
-@media(max-width:900px){
-  .hero{
+@media (max-width: 900px) {
+  .hero {
     position: relative;
-    height:100%;
-    width:calc(100% - 60px);
-    margin:0 auto;
+    height: 100%;
+    width: calc(100% - 60px);
+    margin: 0 auto;
     max-width: 1100px;
   }
 
-  .styleBar{
-    width:50px;
+  .styleBar {
+    width: 50px;
   }
 
-  .heroArtWrapper{
-    width:400px;
-    height:400px;
+  .heroArtWrapper {
+    width: 400px;
+    height: 400px;
   }
 
-  .Quote{
-    font-size:1rem;
-  }
-    
-  .heroMain h1{
-    font-size:3rem ;
+  .Quote {
+    font-size: 1rem;
   }
 
-  .heroArtWrapper{
-    width:100%;
-    max-height:400px;
+  .heroMain h1 {
+    font-size: 3rem;
   }
-  .aboutWheelWrapper{
-    position:absolute;
-    width:200px;
-    height:200px;
-    top:-100px;
-    right:0px;
+
+  .heroArtWrapper {
+    width: 100%;
+    max-height: 400px;
   }
-  
+  .aboutWheelWrapper {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    top: -100px;
+    right: -50px;
+  }
 }
 
-@media(max-width:540px){
-  .heroContentWrapper{
+@media (max-width: 540px) {
+  .heroContentWrapper {
     display: block;
   }
 
-  .heroArtWrapper{
+  .heroArtWrapper {
     position: relative;
-    width:100%;
-    height:300px;
+    width: 100%;
+    height: 300px;
   }
 }
